--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,16 @@ body {
 	background-image: url('../img/full_bleed.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
+	background-position-x: 20%;
 	overflow-x: hidden;
+}
+
+@media only screen and (min-resolution: 2dppx) and (min-width: 950px),
+	only screen and (-webkit-device-pixel-ratio: 2) and (min-width: 950px)
+{
+	body {
+		background-position-x: 0;
+	}
 }
 
 .wrapper {
