--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,9 +7,33 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Ben Stolovitz</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<h1>Ben Stolovitz</h1>
+		<p>
+			I'm a software engineer at Microsoft
+			working on Windows.
+		</p>
+
+		<h2>Projects</h2>
+		<ul>
+			<li>
+				<a href="https://security.stolovitz.com">Sensible Security</a> - a cybersecurity guide for normal people
+			</li>
+			<li>
+				<a href="https://morse.horse">morse.horse</a> - learn morse code from a horse
+			</li>
+			<li>
+				<a href="https://resistors.fyi">resistors.fyi</a> - simple, keyboard-first resistor calculator
+			</li>
+		</ul>
+
+		<h2>See also</h2>
+		<ul>
+			<li><a href="https://github.com/citelao">GitHub</a></li>
+			<li><a href="https://www.linkedin.com/in/benstolovitz/">LinkedIn</a></li>
+			<li><a href="/static/Ben Stolovitz.pdf">Resume</a></li>
+		</ul>
 	</body>
 </html>
