--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import { Image } from '@astrojs/image/components';
 
 import full_bleed from "../img/full_bleed.jpg";
+import "../css/style.scss";
 ---
 
 <html lang="en">
