--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,6 +35,13 @@ import "../css/style.scss";
 			</li>
 		</ul>
 
+		<h3>Archive</h3>
+		<ul>
+			<li><a href="https://acac.wustl.edu">WUSTL ACAC</a> - website</li>
+			<li><a href="https://aristocats.wustl.edu">WUSTL Aristocats</a> - website and branding</li>
+			<li><a href="http://cse132.engineering.wustl.edu">WUSTL CSE132</a> - first head TA; wrote several projects, electricity guide in the course textbook, original website</li>
+		</ul>
+
 		<h2>See also</h2>
 		<ul>
 			<li><a href="https://github.com/citelao">GitHub</a></li>
