--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,4 +1,6 @@
 html {
     // https://modernfontstacks.com
     font-family: Avenir, 'Avenir Next LT Pro', Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
+
+    max-width: 40rem;
 }
