--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,8 +16,14 @@ import "../css/style.scss";
 	<body>
 		<h1>Ben Stolovitz</h1>
 		<p>
-			I'm a software engineer at Microsoft
-			working on Windows.
+			I'm a software engineer at Microsoft working on Windows and
+			accessibility. I'm writing an <a
+			href="https://security.stolovitz.com">evidence-based guide to
+			cybersecurity</a>, helped design and teach <a
+			href="https://classes.cec.wustl.edu/~SEAS-SVC-CSE132/">a pilot CS
+			course</a> at my school, and I did <a
+			href="http://sonify.psych.gatech.edu">accessibility research</a> at
+			Georgia Tech.
 		</p>
 
 		<Image width={400} quality={90} src={full_bleed} alt="Photo of Ben Stolovitz" />
