--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -67,10 +67,14 @@ import "../css/style.scss";
 			<li>
 				<a href="https://resistors.fyi">resistors.fyi</a> - simple, keyboard-first resistor calculator
 			</li>
+			<li>
+				<a href="https://ben.stolovitz.com/tar2d2/">tar2d2</a> - simple vacation tracker
+			</li>
 		</ul>
 
 		<h3>Archive</h3>
 		<ul>
+			<li><a href="https://ben.stolovitz.com/Spotify-for-Alfred/">Spotifious</a> - a natural Spotify controller for Alfred</li>
 			<li><a href="https://acac.wustl.edu">WUSTL ACAC</a> - website</li>
 			<li><a href="https://aristocats.wustl.edu">WUSTL Aristocats</a> - website and branding</li>
 			<li><a href="http://cse132.engineering.wustl.edu">WUSTL CSE132</a> - first head TA; wrote several projects, electricity guide in the course textbook, original website</li>
