--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -3,7 +3,7 @@ html {
     font-family: Avenir, 'Avenir Next LT Pro', Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
     line-height: 1.5;
 
-    max-width: 40rem;
+    // max-width: 40rem;
 }
 
 body {
