--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,17 @@ function getSimpleDate(d: Date): string {
 		<meta name="generator" content={Astro.generator} />
 		<title>Ben Stolovitz</title>
 
-		<style>
+		<style lang="scss">
+			main {
+				display: flex;
+				gap: 2rem;
+				flex-wrap: wrap;
+			}
+
+			section { 
+				max-width: 38rem;
+			}
+
 			.inline {
 				list-style: none;
 				margin: 0;
@@ -44,61 +54,81 @@ function getSimpleDate(d: Date): string {
 
 				text-decoration: none;
 			}
+
+			table {
+				td {
+					padding: 0 0.5rem;
+
+					&:first-child {
+						padding-left: 0;
+					}
+
+					&:last-child {
+						padding-right: 0;
+					}
+				}
+
+				.date {
+					text-align: right;
+				}
+			}
 		</style>
 	</head>
 	<body>
-		<h1>Ben Stolovitz</h1>
-		<p>
-			I'm a software engineer at Microsoft working on Windows and
-			accessibility. I'm writing an <a
-			href="https://security.stolovitz.com">evidence-based guide to
-			cybersecurity</a>, helped design and teach <a
-			href="https://classes.cec.wustl.edu/~SEAS-SVC-CSE132/">a pilot CS
-			course</a> at my school, and I did <a
-			href="http://sonify.psych.gatech.edu">accessibility research</a> at
-			Georgia Tech.
-		</p>
-
-		<ul class="inline">
-			<li><a class="buttonLink" href="https://github.com/citelao">GitHub</a></li>
-			<li><a class="buttonLink" href="https://www.linkedin.com/in/benstolovitz/">LinkedIn</a></li>
-			<li><a class="buttonLink" href="/static/Ben Stolovitz.pdf">Resume</a></li>
-		</ul>
-
-		<Image width={400} quality={90} src={full_bleed} alt="Photo of Ben Stolovitz" />
-
-		<h2>Projects</h2>
-		<ul>
-			<li>
-				<a href="https://security.stolovitz.com">Sensible Security</a> - a cybersecurity guide for normal people
-			</li>
-			<li>
-				<a href="https://morse.horse">morse.horse</a> - learn morse code from a horse
-			</li>
-			<li>
-				<a href="https://resistors.fyi">resistors.fyi</a> - simple, keyboard-first resistor calculator
-			</li>
-			<li>
-				<a href="https://ben.stolovitz.com/tar2d2/">tar2d2</a> - simple vacation tracker
-			</li>
-		</ul>
-
-		<h3>Archive</h3>
-		<ul>
-			<li><a href="https://ben.stolovitz.com/Spotify-for-Alfred/">Spotifious</a> - a natural Spotify controller for Alfred</li>
-			<li><a href="https://acac.wustl.edu">WUSTL ACAC</a> - website</li>
-			<li><a href="https://aristocats.wustl.edu">WUSTL Aristocats</a> - website and branding</li>
-			<li><a href="http://cse132.engineering.wustl.edu">WUSTL CSE132</a> - first head TA; wrote several projects, electricity guide in the course textbook, original website</li>
-		</ul>
-
-		<h2>Blog</h2>
-		<table>
-			{allBlogPosts.map((post) => {
-				return <tr>
-					<td>{getSimpleDate(post.data.publishDate)}</td>
-					<td><a href={`/posts/${post.slug}`}>{post.data.title}</a></td>
-				</tr>;
-			})}
-		</table>
+		<main>
+			<section>
+				<h1>Ben Stolovitz</h1>
+				<p>
+					I'm a software engineer at Microsoft working on Windows and
+					accessibility. I'm writing an <a
+					href="https://security.stolovitz.com">evidence-based guide to
+					cybersecurity</a>, helped design and teach <a
+					href="https://classes.cec.wustl.edu/~SEAS-SVC-CSE132/">a pilot CS
+					course</a> at my school, and I did <a
+					href="http://sonify.psych.gatech.edu">accessibility research</a> at
+					Georgia Tech.
+				</p>
+				<ul class="inline">
+					<li><a class="buttonLink" href="https://github.com/citelao">GitHub</a></li>
+					<li><a class="buttonLink" href="https://www.linkedin.com/in/benstolovitz/">LinkedIn</a></li>
+					<li><a class="buttonLink" href="/static/Ben Stolovitz.pdf">Resume</a></li>
+				</ul>
+				<Image width={400} quality={90} src={full_bleed} alt="Photo of Ben Stolovitz" />
+				<h2>Projects</h2>
+				<ul>
+					<li>
+						<a href="https://security.stolovitz.com">Sensible Security</a> - a cybersecurity guide for normal people
+					</li>
+					<li>
+						<a href="https://morse.horse">morse.horse</a> - learn morse code from a horse
+					</li>
+					<li>
+						<a href="https://resistors.fyi">resistors.fyi</a> - simple, keyboard-first resistor calculator
+					</li>
+					<li>
+						<a href="https://ben.stolovitz.com/tar2d2/">tar2d2</a> - simple vacation tracker
+					</li>
+				</ul>
+				<h3>Archive</h3>
+				<ul>
+					<li><a href="https://ben.stolovitz.com/Spotify-for-Alfred/">Spotifious</a> - a natural Spotify controller for Alfred</li>
+					<li><a href="https://acac.wustl.edu">WUSTL ACAC</a> - website</li>
+					<li><a href="https://aristocats.wustl.edu">WUSTL Aristocats</a> - website and branding</li>
+					<li><a href="http://cse132.engineering.wustl.edu">WUSTL CSE132</a> - first head TA; wrote several projects, electricity guide in the course textbook, original website</li>
+				</ul>
+			</section>
+	
+			<section>
+				<h2>Blog</h2>
+				<table>
+					{allBlogPosts.map((post) => {
+						return <tr>
+							<td class="date">{getSimpleDate(post.data.publishDate)}</td>
+							<td><a href={`/posts/${post.slug}`}>{post.data.title}</a></td>
+						</tr>;
+					})}
+				</table>
+			</section>
+		</main>
 	</body>
 </html>
