--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -1,6 +1,8 @@
 ---
 import { getCollection } from 'astro:content';
 
+import Base from "../../layouts/Base.astro";
+
 export async function getStaticPaths() {
   const blogEntries = await getCollection('blog');
   return blogEntries.map(entry => ({
@@ -11,5 +13,8 @@ export async function getStaticPaths() {
 const { entry } = Astro.props;
 const { Content } = await entry.render();
 ---
-<h1>{entry.data.title}</h1>
-<Content />
+<Base title={`test`}>
+    <a href="/">&larr; back home</a>
+    <h1>{entry.data.title}</h1>
+    <Content />
+</Base>
