--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -14,7 +14,18 @@ const { entry } = Astro.props;
 const { Content } = await entry.render();
 ---
 <Base title={`test`}>
+    <style lang="scss">
+        body {
+            display: flex;
+            gap: 2rem;
+            flex-wrap: wrap;
+        }
+    </style>
+
     <a href="/">&larr; back home</a>
-    <h1>{entry.data.title}</h1>
-    <Content />
+
+    <main>
+        <h1>{entry.data.title}</h1>
+        <Content />
+    </main>
 </Base>
