stub narrator page

--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -20,6 +20,10 @@ const { Content } = await entry.render();
             gap: 2rem;
             flex-wrap: wrap;
         }
+
+        main {
+            max-width: 38rem;
+        }
     </style>
 
     <a href="/">&larr; back home</a>
