--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -39,3 +39,21 @@ a {
         transform: translateY(1px);
     }
 }
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul
+table
+{
+    margin: 1rem 0;
+}
+
+table {
+    border-collapse: collapse;
+    border: none;
+}
