--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -24,7 +24,8 @@ const { Content } = await entry.render();
         }
 
         main {
-            max-width: 38rem;
+            // max-width: 38rem;
+            width: 100%;
         }
     </style>
 
