--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -13,13 +13,12 @@ const { title } = Astro.props;
 
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZN0HVXBFN4"></script>
-		<script>
-		// @ts-nocheck
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
+		<script is:inline>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
 
-		gtag('config', 'G-ZN0HVXBFN4');
+			gtag('config', 'G-ZN0HVXBFN4');
 		</script>
 
 		<link rel="alternate" type="application/rss+xml" href="/rss.xml" title="Blog RSS Feed" />
